--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "server": "nodemon -w server.js -w src/server server.js",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public",
-    "lint": "eslint .",
-    "precommit": "npm run lint"
+    "lint": "eslint ."
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.3.15",
@@ -43,8 +42,11 @@
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-react-redux": "^2.3.0",
-    "gemini": "^5.6.2",
-    "husky": "^0.14.3",
-    "selenium-standalone": "^6.14.0"
+    "husky": "^0.14.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
