--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
+sudo: required
+services:
+  - docker
 language: node_js
 node_js:
   - "9"
 
 script:
   - npm run lint
+deploy:
+  provider: script
+  script: bash heroku_deploy
+  on:
+    branch: master
