--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "https://localhost:3001/",
   "dependencies": {
+    "eslint": "^5.9.0",
     "babel-eslint": "^8.2.3",
     "concurrently": "^3.5.1",
     "cookie-parser": "^1.4.3",
